--- a/growing_cities/templates/pages/film.html
+++ b/growing_cities/templates/pages/film.html
@@ -43,9 +43,9 @@
         {% for member in teammembers %}
             {% cycle 'left' 'right' as position silent %}
             {% if position == "left" %}
-            <div class="team-member-row count-{{ forloop.counter }}">
+            <div class="team-member-row count-{{ forloop.counter }} match-row-heights">
             {% endif %}
-                <div class="team-member grid grid-1-2 {{ position }}">
+                <div class="team-member grid grid-1-2 {{ position }} match-row-height">
                     {% include "team/_teammember_detail.html" %}
                 </div>
             {% if position == "right" %}
