--- a/growing_cities/static/css/base.css
+++ b/growing_cities/static/css/base.css
@@ -483,6 +483,7 @@ ul.story-list li {
 .product {
     border-right: 1px solid #D5D3C7;
     padding: 20px;
+    text-align: center;
 }
 .product.right {
     border-right: 0;
