--- a/growing_cities/templates/pages/contact.html
+++ b/growing_cities/templates/pages/contact.html
@@ -15,4 +15,8 @@
 </div>
 
 <div id="contact-form" class="ajax-form-wrapper"></div>
+
+<div class="contact-mailing">
+    {% show_page_content "mailing" %}
+</div>
 {% endblock %}
