--- a/growing_cities/templates/_submenu.html
+++ b/growing_cities/templates/_submenu.html
@@ -1,4 +1,5 @@
 <div class="submenu">
+    <a class="submenu-top-link">top</a>
     <div class="outer-center">
         <div class="inner-center">
             <ul></ul>
