--- a/growing_cities/templates/base.html
+++ b/growing_cities/templates/base.html
@@ -180,6 +180,8 @@
         </div>
     </div>
 
+    <div class="loading-indicator"></div>
+
     {% block extra_markup %}{% endblock %}
 </body>
 </html>
