--- a/growing_cities/templates/books/_book_detail.html
+++ b/growing_cities/templates/books/_book_detail.html
@@ -1,8 +1,8 @@
-{% load fiber_tags %}
+{% load fiber_tags imagekit %}
 
 <div>
     <a href="{{ book.link }}">
-        <img src="{{ book.image.url }}" />
+        {% thumbnail '150x150' book.image %}
     </a>
 
     <div>
