--- a/growing_cities/static/css/base.css
+++ b/growing_cities/static/css/base.css
@@ -204,6 +204,7 @@ body.loading .loading-indicator {
 #map-drawer {
     color: #E7E8D6;
     background: url(/static/img/map-drawer-bg.png);
+    overflow-x: hidden;
     overflow-y: auto;
     padding: 25px;
     position: absolute;
