--- a/growing_cities/templates/base.html
+++ b/growing_cities/templates/base.html
@@ -139,30 +139,32 @@
     </div>
 
     <div class="full-height grid" id="map-drawer">
-        <h2 class="map-drawer-title">Grow Where You Are</h2>
+        <div id="map-drawer-content">
+            <h2 class="map-drawer-title">Grow Where You Are</h2>
 
-        <div class="map-drawer-section">
-            <h3>Where are you?</h3>
-            <select id="map-city">
-                <option>Pick a city</option>
-                {% for city in cities %}
-                <option data-city="{{ city.city }}" data-state="{{ city.state_province }}">
-                    {{ city.city }}, {{ city.state_province }}
-                </option>
-                {% endfor %}
-            </select>
-        </div>
+            <div class="map-drawer-section">
+                <h3>Where are you?</h3>
+                <select id="map-city">
+                    <option>Pick a city</option>
+                    {% for city in cities %}
+                    <option data-city="{{ city.city }}" data-state="{{ city.state_province }}">
+                        {{ city.city }}, {{ city.state_province }}
+                    </option>
+                    {% endfor %}
+                </select>
+            </div>
 
-        <div class="map-drawer-section">
-            <h3>What do you want to do?</h3>
-            <select id="map-activities" disabled="disabled">
-                <option>Everything</option>
-            </select>
-        </div>
+            <div class="map-drawer-section">
+                <h3>What do you want to do?</h3>
+                <select id="map-activities" disabled="disabled">
+                    <option>Everything</option>
+                </select>
+            </div>
 
-        <div class="map-drawer-section">
-            <h3>Results:</h3>
-            <ul id="map-results"></ul>           
+            <div class="map-drawer-section">
+                <h3>Results:</h3>
+                <ul id="map-results"></ul>           
+            </div>
         </div>
     </div>
 
