--- a/growing_cities/templates/pages/learn.html
+++ b/growing_cities/templates/pages/learn.html
@@ -29,7 +29,7 @@
         </div>
     </div>
 
-    <div class="grid grid-1-2 story-form ajax-form-wrapper">
+    <div class="story-form ajax-form-wrapper">
         {% with form=story_form %}
         {% include "stories/story_form.html" %}
         {% endwith %}
