--- a/growing_cities/static/css/base.css
+++ b/growing_cities/static/css/base.css
@@ -334,6 +334,7 @@ body.loading .loading-indicator {
 
 .map-result .name {
     font-weight: bold;
+    margin-bottom: 5px;
 }
 
 .map-result .location {
