result name size

--- a/growing_cities/static/css/base.css
+++ b/growing_cities/static/css/base.css
@@ -333,6 +333,7 @@ body.loading .loading-indicator {
 }
 
 .map-result .name {
+    font-size: 14px;
     font-weight: bold;
     margin-bottom: 5px;
 }
